# DeepLearningFromScratch

./: .gitignore  LICENSE  NN.cabal  Perceptron.cabal  stack.yaml
src/: BackProp.hs  CNN.hs  Functions.hs  Layere.hs  Main.hs  Main3.6.hs  Mnist.hs  NeuralNetwork.hs  Optimizer.hs  Types.hs  Util.hs
test/: doctests.hs
