name:                NN
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ayachigin/Perceptron#readme
license:             BSD3
license-file:        LICENSE
author:              Ayachi Gin
maintainer:          ayachigin@gmail.com
copyright:           Copyright: (c) 2016 Ayachi Gin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable NN
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , repa-algorithms
                     , repa-io
                     , bytestring
                     , vector
                     , random
                     , lens
                     , wreq
                     , directory
                     , zlib

test-suite doctests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:   base,
                   doctest
  
